fix extra margin when you scroll and the actions-menu stick on the top of the page

--- a/themes/new-timtec/static/css/less/admin.less
+++ b/themes/new-timtec/static/css/less/admin.less
@@ -2,6 +2,10 @@
 // ********************************************************************* //
 #admin {
 
+  .wrapper-bg {
+    overflow: auto; // fix extra margin when you scroll and the actions-menu stick on the top of the page
+  }
+
   // COURSES
   // ********************************************************************* //
   #courses {
