--- a/themes/new-timtec/static/css/less/new-timtec.less
+++ b/themes/new-timtec/static/css/less/new-timtec.less
@@ -30,7 +30,6 @@ body {
 .wrapper-bg {
 	background-repeat: no-repeat;
 	background-position: top center;
-    overflow: auto;
 }
 
 .wrapper-courses {
